<resources>
    <string name="app_name">navigationDrawer</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact</string>
    <string name="photo">Photo</string>
    <string name="logout">Logout</string>
    <string name="communication">Communication</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="login">Login</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="user_name">User Name</string>
    <string name="exit">Exit</string>
</resources>