<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tootools="http://schemas.android.com/tools"
    tootools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_person_24"
            android:title="@string/profile"
            android:id="@+id/item_profile"
            />

        <item
            android:icon="@drawable/ic_photo_24"
            android:title="@string/photo"
            android:id="@+id/item_photo"
            />

        <item
            android:icon="@drawable/ic_contact_phone_24"
            android:title="@string/contact"
            android:id="@+id/item_contact"
            />


    </group>

    <item
        android:title="@string/communication"
        android:icon="@drawable/batman">
        <menu>
            <item
                android:icon="@drawable/ic_baseline_send_24"
                android:title="@string/send"
                android:id="@+id/item_send"
                />

            <item
                android:icon="@drawable/ic_baseline_share_24"
                android:title="@string/share"
                android:id="@+id/item_share"
                />

            <item
                android:icon="@drawable/ic_baseline_logout_24"
                android:title="@string/logout"
                android:id="@+id/item_logout"
                />
        </menu>
    </item>
</menu>